tests/read/attribute_table_none/test.stderr
error: A struct must be annotated with `#[crud_table("table_name")]` to specify the database table
 --> tests/read/attribute_table_none/test.rs:4:1
  |
4 | / struct Test {
5 | |     #[crud_id]
6 | |     id: i64,
7 | |     name: String,
8 | |     location: String,
9 | | }
  | |_^

error[E0599]: no function or associated item named `read` found for struct `Test` in the current scope
  --> tests/read/attribute_table_none/test.rs:16:19
   |
4  | struct Test {
   | ----------- function or associated item `read` not found for this struct
...
16 |     let _ = Test::read(&pool, 1);
   |                   ^^^^ function or associated item not found in `Test`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `read`, perhaps you need to implement one of them:
           candidate #1: `AsyncReadExt`
           candidate #2: `digest::XofReader`
           candidate #3: `futures_util::io::AsyncReadExt`
           candidate #4: `sqlx_core::net::socket::Socket`
           candidate #5: `std::io::Read`

error[E0599]: no function or associated item named `read_one` found for struct `Test` in the current scope
  --> tests/read/attribute_table_none/test.rs:17:19
   |
4  | struct Test {
   | ----------- function or associated item `read_one` not found for this struct
...
17 |     let _ = Test::read_one(&pool, 1);
   |                   ^^^^^^^^ function or associated item not found in `Test`

error[E0599]: no function or associated item named `read_all` found for struct `Test` in the current scope
  --> tests/read/attribute_table_none/test.rs:18:19
   |
4  | struct Test {
   | ----------- function or associated item `read_all` not found for this struct
...
18 |     let _ = Test::read_all(&pool);
   |                   ^^^^^^^^ function or associated item not found in `Test`
